--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="#" class="text-1">
                     <h1 class="tit">Suerte 메뉴관리🍀</h1>
                 </a>
-                <nav class="menu">
+                <nav class="cafe-category-menu">
                     <button data-category-name="coffee" class="header-btn">
                         ☕ coffee
 
@@ -44,14 +44,14 @@
             </header>
             <main class="wrapper">
                 <div class="my-2 menu-search">
-                    <h2 class="text2">☕ 커피 메뉴 관리</h2>
+                    <h2 id="category-title",class="text2">☕ Suerte 메뉴 관리</h2>
                     <span class="menu-count">총 0개</span>
                 </div>
                 <form id="menu-form">
                     <div class="d-flex">
                         <!-- <label for="coffee-name" class="input-label">커피 메뉴이름</label> -->
                         <input type="text" id="coffee-name" name="coffee-list" class="input-field"
-                            placeholder="커피이름을 입력해주세요." autocomplete="off">
+                            placeholder="내용을 입력해주세요." autocomplete="off">
                         <button type="button" name="coffee-submit-1" id="submit-button" class="coffee-submit">
                             확인
                         </button>
